# rgbctl

./: .clang-format  CMakeLists.txt  DESIGN.md  LICENSE.txt
cmake/: FindTcc.cmake
include/rgbctl/: acquire.hpp  assert.hpp  controller.hpp  detected_device.hpp  detector.hpp  device_context.hpp  effects.hpp  loop.hpp  narrow.hpp  raw_device_stream.hpp  rgb.hpp  rgbctl.h  rgbctl.hpp  texture.h  texture.hpp  utils.hpp  vec.hpp
include/rgbctl/effects/: linear.hpp  rotate.hpp
plugins/drivers/: CMakeLists.txt  test_driver.c
src/: CMakeLists.txt  acquire.cpp  assert.cpp  builtin_modules.cpp  builtin_modules.hpp  controller.cpp  detected_device.cpp  detector.cpp  device_context.cpp  devices.cpp  effects.cpp  fixed_config.hpp  loop.cpp  main.cpp  raw_device_stream.cpp  rgb.cpp  texture.cpp  timer_and_rgb_lerp.cpp  utils.cpp
src/builtins/: base_module.hpp  builtins.hpp
src/builtins/asus/: asus_x570.cpp  asus_x570.hpp
src/builtins/corsair/: corsair_h100i_pro_xt.cpp  corsair_h100i_pro_xt.hpp  corsair_utils.cpp  corsair_utils.hpp
src/effects/: linear.cpp  linear.cpp~  rotate.cpp
tests/: CMakeLists.txt  driver_plugin_tests.cpp  dynamic_module.c  dynamic_module_tests.cpp  effect_graph_parsing_tests.cpp  effect_tests.cpp  mock_read_write_stream.hpp  module_tests.cpp  product_id_tests.cpp  rgb_tests.cpp  sample_test.cpp  scaling_tests.cpp  shader_tests.cpp  testing.cpp  testing.hpp
